avoid theme flickering on first load

--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,7 @@
   --accent-color: #e5e8eb;
 }
 
-body.dark-mode {
+:root.dark-mode {
   --bg-color: #121a21;
   --font-color: white;
   --accent-color: #E5E8EB;
